# trade-agents

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: config.py  logging_config.py  main.py  worker.py
app/api/: deps.py  routes_admin.py  routes_dashboard.py  routes_sources.py  routes_webhooks.py  ws.py
app/eval/: golden.py  metrics.py  run.py  runner.py
app/graph/: builder.py  state.py  timing.py
app/ingestion/: normalizer.py  rss_poller.py  simulator.py
app/models/: schemas.py
app/prompts/: analyst.py
app/risk/: rules.py
app/services/: backtest.py  critique.py  exchange.py  llm.py  position_monitor.py  prices.py  slack.py  store.py  strategy.py  technicals.py
deploy/: Caddyfile  README.md
docs/: design-brief.md
scripts/: demo.py  eval.py
tests/: conftest.py  test_admin_gate.py  test_admin_inject.py  test_aggregator.py  test_analyst_parsing.py  test_backtest.py  test_config_guards.py  test_congress.py  test_dashboard.py  test_dedup.py  test_eval.py  test_executor.py  test_graph_e2e.py  test_ingestion_funnel.py  test_learning_loop.py  test_llm_usage.py  test_normalizer.py  test_notifier.py  test_position_pnl.py  test_prices.py  test_purge_mock.py  test_redis_store.py  test_risk_rules.py  test_runner_and_leverage.py  test_source_defaults.py  test_source_manager.py  test_sources.py  test_store.py  test_strategy.py  test_technicals.py  test_truth_social.py  test_webhook_rss.py
(+28 files in other folders)
